applications/templates/depricated/openshift-templates-bkp/ubuntu-vnc.yaml
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: ubuntu-vnc
message: |-
  A Ubuntu pod has been scheduled for creation in your project, and should be soon available.
  Building images takes some minutes to complete, so please be patient. You can follow progress on your projects overview page.

  You can use `oc get pods` to get the pod ID and connect using your local terminal `oc rsh POD_ID`
  Or use the terminal tab in the Ubuntu pod view of the OpenShift web UI
metadata:
  annotations:
    description: "Start a Ubuntu Linux workspace with a regular desktop interface
      accessible in the browser\n\nYou can use this template to deploy various desktop
      environments:\n- Ubuntu 20.04 with LXDE desktop (cf. https://github.com/vemonet/docker-ubuntu-vnc-desktop):\nghcr.io/vemonet/docker-ubuntu-vnc-desktop:latest\n-
      NeuroDesk (cf. https://github.com/NeuroDesk/vnm)\ndocker.pkg.github.com/neurodesk/neurodesk/vnm2:20210113\n\nVisit
      https://github.com/vemonet/docker-ubuntu-vnc-desktop for more details on the
      image\nPlease create issues if you are experiencing problem with the workspace.\n\n\U0001F464
      You will be the `root` user inside the container.\n\n\U0001F4C2 Use the `/root/persistent`
      folder (in the home of your user) and its subfolders to store your data in the
      existing persistent storage\nYou can find the persistent storage in the DSRI
      web UI, go to Administrator view > Storage > Persistent Volume Claims"
    iconClass: icon-ubuntu
    kubectl.kubernetes.io/last-applied-configuration: "{\"apiVersion\":\"template.openshift.io/v1\",\"kind\":\"Template\",\"labels\":{\"template\":\"ubuntu-vnc\"},\"message\":\"A
      Ubuntu pod has been scheduled for creation in your project, and should be soon
      available.\\nBuilding images takes some minutes to complete, so please be patient.
      You can follow progress on your projects overview page.\\n\\nYou can use `oc
      get pods` to get the pod ID and connect using your local terminal `oc rsh POD_ID`\\nOr
      use the terminal tab in the Ubuntu pod view of the OpenShift web UI\",\"metadata\":{\"annotations\":{\"description\":\"Start
      a Ubuntu Linux workspace with a regular desktop interface accessible in the
      browser\\n\\nYou can use this template to deploy various desktop environments:\\n-
      Ubuntu 20.04 with LXDE desktop (cf. https://github.com/vemonet/docker-ubuntu-vnc-desktop):\\nghcr.io/vemonet/docker-ubuntu-vnc-desktop:latest\\n-
      NeuroDesk (cf. https://github.com/NeuroDesk/vnm)\\ndocker.pkg.github.com/neurodesk/neurodesk/vnm2:20210113\\n\\nVisit
      https://github.com/vemonet/docker-ubuntu-vnc-desktop for more details on the
      image\\nPlease create issues if you are experiencing problem with the workspace.\\n\\n\U0001F464
      You will be the `root` user inside the container.\\n\\n\U0001F4C2 Use the `/root/persistent`
      folder (in the home of your user) and its subfolders to store your data in the
      existing persistent storage\\nYou can find the persistent storage in the DSRI
      web UI, go to Administrator view \\u003e Storage \\u003e Persistent Volume Claims\",\"iconClass\":\"icon-ubuntu\",\"openshift.io/display-name\":\"Ubuntu
      with desktop interface\",\"openshift.io/documentation-url\":\"https://maastrichtu-ids.github.io/dsri-documentation/docs/catalog-utilities#ubuntu\",\"openshift.io/provider-display-name\":\"Institute
      of Data Science, UM\",\"openshift.io/support-url\":\"https://maastrichtu-ids.github.io/dsri-documentation/help\",\"tags\":\"ubuntu,ui,vnc,root,persistent\"},\"name\":\"ubuntu-vnc\",\"namespace\":\"openshift\"},\"objects\":[{\"apiVersion\":\"v1\",\"kind\":\"PersistentVolumeClaim\",\"metadata\":{\"labels\":{\"app\":\"${APPLICATION_NAME}\"},\"name\":\"${APPLICATION_NAME}\"},\"spec\":{\"accessModes\":[\"ReadWriteMany\"],\"resources\":{\"requests\":{\"storage\":\"${STORAGE_SIZE}\"}}}},{\"apiVer [...]
      be without spaces (use -), and unique in the project.\",\"displayName\":\"Application
      name\",\"name\":\"APPLICATION_NAME\",\"required\":true,\"value\":\"ubuntu\"},{\"description\":\"The
      password of your user and to access Ubuntu from the web UI\",\"displayName\":\"Ubuntu
      Password\",\"name\":\"PASSWORD\",\"required\":true},{\"description\":\"Size
      of the storage used for the notebook (approximate).\",\"displayName\":\"Storage
      size\",\"name\":\"STORAGE_SIZE\",\"required\":true,\"value\":\"10Gi\"},{\"description\":\"The
      docker image used to start the container (e.g. Ubuntu or NeuroDesk)\",\"displayName\":\"Application
      Docker image\",\"name\":\"APPLICATION_IMAGE\",\"required\":true,\"value\":\"ghcr.io/vemonet/docker-ubuntu-vnc-desktop:latest\"}]}\n"
    openshift.io/display-name: Ubuntu with desktop interface
    openshift.io/documentation-url: https://maastrichtu-ids.github.io/dsri-documentation/docs/catalog-utilities#ubuntu
    openshift.io/provider-display-name: Institute of Data Science, UM
    openshift.io/support-url: https://maastrichtu-ids.github.io/dsri-documentation/help
    tags: ubuntu,ui,vnc,root,persistent
  creationTimestamp: "2021-05-27T13:58:51Z"
  name: ubuntu-vnc
  namespace: openshift
  resourceVersion: "3786754814"
  uid: f30ee5ff-f5ec-4f6a-8929-8a0ba747f084
objects:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: ${STORAGE_SIZE}
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: ${APPLICATION_NAME}
      template: ubuntu-vnc
    name: ${APPLICATION_NAME}
  spec:
    lookupPolicy:
      local: true
    tags:
    - from:
        kind: DockerImage
        name: ${APPLICATION_IMAGE}
      name: latest
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      app: ${APPLICATION_NAME}
      template: ubuntu-vnc
    name: ${APPLICATION_NAME}
  stringData:
    application-password: ${PASSWORD}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    replicas: 1
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel: "true"
        labels:
          app: ${APPLICATION_NAME}
          deploymentconfig: ${APPLICATION_NAME}
      spec:
        automountServiceAccountToken: false
        containers:
        - env:
          - name: MOZ_DISABLE_CONTENT_SANDBOX
            value: "1"
          - name: HTTP_PASSWORD
            valueFrom:
              secretKeyRef:
                key: application-password
                name: ${APPLICATION_NAME}
          - name: VNC_PASSWORD
            valueFrom:
              secretKeyRef:
                key: application-password
                name: ${APPLICATION_NAME}
          - name: PASSWORD
            valueFrom:
              secretKeyRef:
                key: application-password
                name: ${APPLICATION_NAME}
          image: ${APPLICATION_NAME}:latest
          imagePullPolicy: IfNotPresent
          name: ubuntu-container
          ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 5900
            protocol: TCP
          resources:
            limits:
              cpu: "32"
              memory: 200Gi
            requests:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
          - mountPath: /root/persistent
            name: data
          - mountPath: /dev/shm
            name: dshm
        runtimeClassName: selinux
        serviceAccountName: anyuid
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ${APPLICATION_NAME}
        - emptyDir:
            medium: Memory
          name: dshm
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: false
        containerNames:
        - ubuntu-container
        from:
          kind: ImageStreamTag
          name: ${APPLICATION_NAME}:latest
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    ports:
    - name: 6080-tcp
      port: 6080
      protocol: TCP
      targetPort: 80
    selector:
      app: ${APPLICATION_NAME}
      deploymentconfig: ${APPLICATION_NAME}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    host: ""
    port:
      targetPort: 6080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: ${APPLICATION_NAME}
      weight: 100
parameters:
- description: Must be without spaces (use -), and unique in the project.
  displayName: Application name
  name: APPLICATION_NAME
  required: true
  value: ubuntu
- description: The password of your user and to access Ubuntu from the web UI
  displayName: Ubuntu Password
  name: PASSWORD
  required: true
- description: Size of the storage used for the notebook (approximate).
  displayName: Storage size
  name: STORAGE_SIZE
  required: true
  value: 10Gi
- description: The docker image used to start the container (e.g. Ubuntu or NeuroDesk)
  displayName: Application Docker image
  name: APPLICATION_IMAGE
  required: true
  value: ghcr.io/vemonet/docker-ubuntu-vnc-desktop:latest
